k8s/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-api
spec:
  selector:
    app: nest-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
